--- a/Sitetree.Example/Web.config
+++ b/Sitetree.Example/Web.config
@@ -1,8 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -11,6 +7,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="server=ERIK-WINDEV\SQLEXPRESS2014;uid=Sitetree;pwd=password;Trusted_Connection=yes;database=Sitetree" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
