--- a/Sitetree.Example/Web.config
+++ b/Sitetree.Example/Web.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
+    <!--  MVC -->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  
+    <!-- Sitetree -->
+    <add key="Sitetree.DbPlatform" value="SqlServer" />
+    <add key="Sitetree.DbVersion" value="14" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=ERIK-WINDEV\SQLEXPRESS2014;uid=Sitetree;pwd=password;Trusted_Connection=yes;database=Sitetree" />
