--- a/Sitetree.Example/packages.config
+++ b/Sitetree.Example/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net46" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="FluentMigrator" version="1.6.1" targetFramework="net46" />
+  <package id="MefContrib" version="1.2.2.1" targetFramework="net46" />
+  <package id="MefContrib.Integration.Autofac" version="1.2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
