--- a/Sitetree.Users/packages.config
+++ b/Sitetree.Users/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net46" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="Dapper" version="1.42" targetFramework="net46" />
+  <package id="MefContrib" version="1.2.2.1" targetFramework="net46" />
+  <package id="MefContrib.Integration.Autofac" version="1.2.2.1" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="MigSharp" version="3.0.0" targetFramework="net46" />
 </packages>
