--- a/Sitetree.Core/packages.config
+++ b/Sitetree.Core/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net46" />
   <package id="Dapper" version="1.42" targetFramework="net46" />
+  <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="MefContrib" version="1.2.2.1" targetFramework="net46" />
   <package id="MefContrib.Integration.Autofac" version="1.2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
