--- a/Sitetree.Core.Tests/packages.config
+++ b/Sitetree.Core.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="MigSharp" version="3.0.0" targetFramework="net46" />
   <package id="Moq" version="4.5.8" targetFramework="net46" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net46" />
   <package id="xunit" version="2.1.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
