--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,4 +4,7 @@ before_build:
 build:
   verbosity: minimal
 after_test:
-  - bash <(curl -s https://codecov.io/bash)
+    - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"%xunit20%\xunit.console.x86.exe" -targetargs:"C:\projects\sitetree-cms\Sitetree.Core.Tests\bin\Debug\Sitetree.Core.Tests.dll -appveyor" -output:.\CodeCoverage.xml
+    - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
+    - pip install codecov
+    - codecov -f "CodeCoverage.xml"
